# 52-challenges

./: .gitattributes  .gitignore  README.md
001-mandelbrot-with-opencv/: CMakeLists.txt  README.md  make.sh
001-mandelbrot-with-opencv/headers/: Complex.hpp  Mandelbrot.hpp
001-mandelbrot-with-opencv/src/: Main.cpp  Mandelbrot.cpp
002-PR-quadtree-haskell/prquadtree/: .gitignore  ChangeLog.md  README.md  package.yaml
003-waste-disposal-plots-germany/: README.md  requirements.txt
003-waste-disposal-plots-germany/notebooks/: explore.ipynb
003-waste-disposal-plots-hamburg/: README.md
004-skewed-data-classification/: README.md  explore.ipynb  requirements.txt
004-skewed-data-classification/libdata/: __main__.py  feature.py  pipeline.py  wrangle.py
004-time-series-geo-data/: README.md  requirements.txt
004-time-series-geo-data/libdata/: __main__.py  feature.py  func.py  setup.py  wrangle.py
005-fourier-transform-haskell/: README.md
005-fourier-transform-haskell/fft/: .gitignore  ChangeLog.md  package.yaml
006-extract-table-from-image/: CMakeLists.txt  README.md  make.sh
006-extract-table-from-image/header/: Extractor.hpp  Table.hpp  TableExtractor.hpp
006-extract-table-from-image/src/: Extract.cpp
007-parallel-haskell/parhask/: README.md  package.yaml
007-parallel-prime-number-haskell/parhask/: ChangeLog.md  README.md  package.yaml
007-parallelism-with-haskell/: README.md  stack.yaml
007-parallelism-with-haskell/parallel/: ChangeLog.md  package.yaml
008-stateful-rest-api/: README.md
009/: README.md
009-covid19-study/: requirements.txt
009/covid19/: data.py  plot.py
010-profile-python-memory-access/: README.md
010-profile-python-memory-access/memory_profile/: data.py  mem.py  serialise.py
011-tensor/: GEN_DATA  README.md  TRAIN  requirements.txt
011-tensor/sinusoid/: data.py
011-tensor/tensor/: data.py  model.py  run.py
012-spark-image-localisation/: README.md  RUN.sh  SUBMIT.sh  build.sbt
013-flatbuffers-serialisation/: CMakeLists.txt  README.md  compile_flatbuffer_obj.sh  make.sh
013-flatbuffers-serialisation/headers/: data.hpp  data_generated.h  functions.hpp
013-flatbuffers-serialisation/schemas/: data.schema
013-flatbuffers-serialisation/src/: Main.cpp
014-spark-graph/: README.md  build.sbt
015-haskell-lens/hlens/: ChangeLog.md  README.md  hlens.cabal  package.yaml
016-dijkstra-cpp/: CMakeLists.txt  README.md  make.sh
016-dijkstra-cpp/headers/: Data.h
016-dijkstra-cpp/src/: Main.cpp
017-kosaraju-cpp/: CMakeLists.txt  README.md  make.sh
017-kosaraju-cpp/headers/: Data.h
017-kosaraju-cpp/src/: Main.cpp
018-graph-optimisation/: CMakeLists.txt
018-graph-optimisation/headers/: Analyse.hpp  Base.hpp  Test.hpp
018-graph-optimisation/src/: Analyse.cpp  Base.cpp  Main.cpp
018-graph-traversal/: README.md
018-graph-traversal/headers/: Functions.hpp
018-graph-traversal/src/: Base.cpp  Main.cpp
018-python-restapi-comparison/: RUN_FAST_API
019-subgraph-optimisation/: README.md  make.sh
019-subgraph-optimisation/headers/: Analyse.hpp  Base.hpp  parser.hpp
019-subgraph-optimisation/src/: Analyse.cpp  Base.cpp  Main.cpp
020-dockerised-nodejs-cassandra/: .dockerignore  BUILD-DOCKER.sh  Dockerfile  README.md  RUN-DOCKER.sh  SETUP.sh  START-CASSADRA.sh  STOP-CASSANDRA.sh  STOP-DOCKER.sh
020-dockerised-nodejs-cassandra/app/: main.js  package.json
021-haskell-semigroup/p21/: p21.cabal  package.yaml
022-python-coroutines/: README.md  play-1.py  play-2.py  play-3.py  play.py
023-corona-dashboard/: README.md  requirements.txt  setup.py
023-corona-dashboard/app/: dashboard.py
024-table-reconstruction-from-image/: README.md  make.sh
024-table-reconstruction-from-image/notebooks/: image.ipynb
024-table-reconstruction-from-image/src/: Extract.cpp
025-crawl-football-wiki/: README.md  requirements.txt  run.py  setup.py
025-crawl-football-wiki/crawler/: lib.py
026-ab-test-simulation/: README.md
026-ab-test-simulation/abtest/: build.sbt
027-array-puzzles/: README.md
027-array-puzzles/puzzle/: build.sbt
028-puzzles-python/: test_array.py  test_graph.py  test_linked_list.py  test_number.py  test_string.py  test_tree.py
029-classification-playground/: AB Test.ipynb  BERT.ipynb  BoostedTrees v BERT.ipynb  DNN.ipynb  README.md  Recommendation.ipynb
029-classification-playground/classroom/: AB Test.ipynb  Netflix.ipynb  Tweets.ipynb
030-read-structure-of-pdf/: run.py
030-read-structure-of-pdf/pdf/: lib.py
031-coding-challenges/: test_array.py  test_dynamic_programming.py  test_graph.py
032-leetcode/: test-mixed.py
033-julia-set-cpp/: CMakeLists.txt  README.md  make.sh
033-julia-set-cpp/headers/: Complex.hpp  Julia.hpp
033-julia-set-cpp/src/: Julia.cpp  Main.cpp
034-akka-singleton/: README.md
035-akka-large-singleton/: README.md  build.sbt
036-daemon-monitor/: Dockerfile  Makefile  README.md  daemon36.service
036-daemon-monitor/src/: daemon.c
037-scala-puzzles/: build.sbt
038-slam-cpp/: CMakeLists.txt  README.md  make.sh
038-slam-cpp/src/: Main.cpp
039-haskell-restapi/: README.md  stack.yaml
039-haskell-restapi/restapi/: package.yaml  restapi.cabal
040-monte-carlo-haskell/: README.md
040-monte-carlo-haskell/monte/: monte.cabal  package.yaml
041-gRPC/: README.md  api.proto  compose.yaml
041-gRPC/server/: api_pb2.py  api_pb2_grpc.py  gen_data_file.py  run.py
042-cloud-native-pattern/: Dockerfile  README.md
042-cloud-native-pattern/app/: server.py
042-cloud-native-pattern/v1/: blue-deploy.yaml  blue-green-service.yaml  green-deploy.yaml  recreate-deploy.yaml  rolling-deploy.yaml  secured-deploy.yaml  service.yaml
043-cpp-multiproc-multithread/: CMakeLists.txt  README.md  build-apple-arm64-libc++.sh  build-apple-arm64.sh  build-apple-m1.sh  build-apple-x86.sh
043-cpp-multiproc-multithread/hpp/: CPU.hpp  Class.hpp  Const.hpp  IO.hpp  Shareable.hpp
043-cpp-multiproc-multithread/src/: Main.cpp
044-coding-challenges/: test-array.py  test-graph.py  test-str.py
XXX-python-restapi-comparison/: README.md  requirements.txt  setup.py
(+51 files in other folders)
